--- a/gb/14/2/27/n4093815.md
+++ b/gb/14/2/27/n4093815.md
@@ -1,24 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hvpmna322/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hvpmna322/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hvpmna322/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hvpmna322/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hvpmna322/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hvpmna322/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hvpmna322/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hvpmna322/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hvpmna322/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hvpmna322/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hvpmna322/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hvpmna322/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hvpmna322/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hvpmna322/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hvpmna322/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hvpmna322/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hvpmna322/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hvpmna322/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hvpmna322/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hvpmna322/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hvpmna322/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hvpmna322/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hvpmna322/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hvpmna322/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【历史今日】二二八事变真相</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2014年02月28日讯】（大纪元记者李明综合报道）1947年2月28日，台湾发生因缉查私烟引发民众大规模反抗政府的<ahref="https://github.com/hvpmna322/djy/blob/master/gb/tag/%E4%BA%8C%E4%BA%8C%E5%85%AB.md#1">二二八</a>事变，<ahref="https://github.com/hvpmna322/djy/blob/master/gb/tag/%E8%92%8B%E4%BB%8B%E7%9F%B3.md#1">蒋介石</a>获悉共党份子已潜入台湾的情报后，派国军第21师赴台平乱，随后又派遣首任国防部长<ahref="https://github.com/hvpmna322/djy/blob/master/gb/tag/%E7%99%BD%E5%B4%87%E7%A6%A7.md#1">白崇禧</a>赴台处理善后，宣示中央政府的怀柔政策，并抚慰民心。</p>
-<p><ahref="https://github.com/hvpmna322/djy/blob/master/gb/tag/%E7%99%BD%E5%B4%87%E7%A6%A7.md#1">白崇禧</a>抵达台湾后，首先视察军事要塞和确保国防安全。他在了解台湾各界民意和事变真相后，下达的第一个命令就是禁止军队和警察滥杀无辜，对在押人犯必须依法进行公开审判，保障台湾人民和复课学生的人身安全，并解救了许多遭诬陷的仕绅、菁英及平民百姓。</p>
-<figure id="attachment_5702870" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/02/1402270716032068-600x263.jpg" alt="1947年3月17日，国防部长白崇禧抵达台北松山机场，同机随行的还有国防部副参谋长冷欣和蒋介石长子蒋经国等人。（网络图片）" title="1947年3月17日，国防部长白崇禧抵达台北松山机场，同机随行的还有国防部副参谋长冷欣和蒋介石长子蒋经国等人。（网络图片）" width="600" b="263"
-	class="size-large wp-image-5702870" /></a><figcaption class="wp-caption-text">1947年3月17日，国防部长白崇禧抵达台北松山机场，同机随行的还有国防部副参谋长冷欣和<ahref="https://github.com/hvpmna322/djy/blob/master/gb/tag/%E8%92%8B%E4%BB%8B%E7%9F%B3.md#1">蒋介石</a>长子蒋经国等人。（网络图片）</figcaption></figure>
+	<p>【大纪元2014年02月28日讯】（大纪元记者李明综合报道）1947年2月28日，台湾发生因缉查私烟引发民众大规模反抗政府的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BA%8C%E4%BA%8C%E5%85%AB.md#1">二二八</a>事变，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%92%8B%E4%BB%8B%E7%9F%B3.md#1">蒋介石</a>获悉共党份子已潜入台湾的情报后，派国军第21师赴台平乱，随后又派遣首任国防部长<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%99%BD%E5%B4%87%E7%A6%A7.md#1">白崇禧</a>赴台处理善后，宣示中央政府的怀柔政策，并抚慰民心。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%99%BD%E5%B4%87%E7%A6%A7.md#1">白崇禧</a>抵达台湾后，首先视察军事要塞和确保国防安全。他在了解台湾各界民意和事变真相后，下达的第一个命令就是禁止军队和警察滥杀无辜，对在押人犯必须依法进行公开审判，保障台湾人民和复课学生的人身安全，并解救了许多遭诬陷的仕绅、菁英及平民百姓。</p>
+<figure id="attachment_5702870" aria-describedby="caption-attachment-5702870" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/02/1402270716032068-600x263.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5702870" class="wp-caption-text">1947年3月17日，国防部长白崇禧抵达台北松山机场，同机随行的还有国防部副参谋长冷欣和<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%92%8B%E4%BB%8B%E7%9F%B3.md#1">蒋介石</a>长子蒋经国等人。（网络图片）</figcaption></figure>
 <p><B>事变起因错综复杂：缉私烟为导火索共党恶意煽动</B></p>
-<p><ahref="https://github.com/hvpmna322/djy/blob/master/gb/tag/%E4%BA%8C%E4%BA%8C%E5%85%AB.md#1">二二八</a>事变的起因错综复杂。国防部长白崇禧在台湾视察和了解情况后认为，事变的远因是日据时代的教育，已使台湾人民的文化认同改变，而近因则是共党分子的恶意煽动。他洞察台共党人分化阴谋，一再呼吁“全台同胞绝不要信其蠢惑”。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BA%8C%E4%BA%8C%E5%85%AB.md#1">二二八</a>事变的起因错综复杂。国防部长白崇禧在台湾视察和了解情况后认为，事变的远因是日据时代的教育，已使台湾人民的文化认同改变，而近因则是共党分子的恶意煽动。他洞察台共党人分化阴谋，一再呼吁“全台同胞绝不要信其蠢惑”。</p>
 <p>抗战胜利后，蒋中正国民政府于1945年10月接收台湾。台湾省行政长官公署长官、警备总部司令陈仪集行政、立法、司法三权于一身，其治理台湾存在某些政策错误，部分接收官员官僚主义作风，贪污腐败，贪赃枉法，导致官民关系十分紧张。战后台湾的通货膨胀与失业等经济民生问题严重，台湾本地人和外省人待遇不同，“同工而不同酬”，双方存有隔阂，互不信任。</p>
-<figure id="attachment_5702875" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/02/1402270752492068-600x399.jpg" alt="1947年2月28日，聚集在台湾省专卖局台北分局门口的民众。（网络图片）" title="1947年2月28日，聚集在台湾省专卖局台北分局门口的民众。（网络图片）" width="600" b="399"
-	class="size-large wp-image-5702875" /></a><figcaption class="wp-caption-text">1947年2月28日，聚集在台湾省专卖局台北分局门口的民众。（网络图片）</figcaption></figure>
+<figure id="attachment_5702875" aria-describedby="caption-attachment-5702875" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/02/1402270752492068-600x399.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5702875" class="wp-caption-text">1947年2月28日，聚集在台湾省专卖局台北分局门口的民众。（网络图片）</figcaption></figure>
 <p>1947年2月27日晚，台湾社会的各种矛盾由台北当局缉查私烟血案而引爆：缉私警察处置失当，2名市民被击毙，晚上9时，民众群集警察总局、宪兵队，要求严办凶手，但柯远芬主持的警察总局处理不力，敷衍推拖。数小时后，得知凶手已经从后门被放走了，民众更加愤怒。第二天，2月28日，发生台北市民请愿、示威、罢工、罢市。同日，市民聚集台湾省行政长官公署抗议，遭公署卫兵开枪射击。当天下午，民众聚集骚动，自台北蔓延到基隆，军队开枪镇压。随即局势在共党分子的煽动下急遽恶化，本省民众开始转往殴打外省人，有些外省公教人员甚至丧失生命。</p>
 <p><B>中共黑手煽动扩大暴乱蒋介石派兵平乱</B></p>
 <p>[[4]]<br />
-	<figure id="attachment_5702881" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/02/1302192213241162-600x406.jpg" alt="1949年中共任命谢雪红为政务院政治法律委员会的委员，上面有毛泽东的签名。（收录在徐宗懋编辑的照片书，台北时英出版社出版，大纪元记者岳芸翻摄）" title="1949年中共任命谢雪红为政务院政治法律委员会的委员，上面有毛泽东的签名。（收录在徐宗懋编辑的照片书，台北时英出版社出版，大纪元记者岳芸翻摄）" width="600" b="406"
-	class="size-large wp-image-5702881" /></a><figcaption class="wp-caption-text">1949年中共任命谢雪红为政务院政治法律委员会的委员，上面有毛泽东的签名。（收录在徐宗懋编辑的照片书，台北时英出版社出版，大纪元记者岳芸翻摄）</figcaption></figure></p>
+	<figure id="attachment_5702881" aria-describedby="caption-attachment-5702881" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/02/1302192213241162-600x406.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5702881" class="wp-caption-text">1949年中共任命谢雪红为政务院政治法律委员会的委员，上面有毛泽东的签名。（收录在徐宗懋编辑的照片书，台北时英出版社出版，大纪元记者岳芸翻摄）</figcaption></figure></p>
 <p>中共自1921年成立开始，就以推翻国民党统治和夺取整个中华江山为目的。二二八事变刚爆发，早已觊觎台湾的毛泽东就在延安发表广播讲话说：“我们中国共产党所领导的武装部队，完全支援台湾人民反对蒋介石和国民党的斗争。我们赞成台湾独立， 我们赞成台湾自己成立一个自己所要求的国家。” （解放日报》1947年2月底社论）</p>
 <p>3月1日，中共潜伏于台湾的首脑人物谢雪红乘乱跳上台面，公开主持在台中市召开的市民大会，成立所谓“人民政府”。在谢雪红等共党分子的煽动下，新竹、台中、彰化、嘉义、高雄等地都有民众袭击警察局与军械库，并抢夺武器。谢雪红率领青年队攻占台中警察局，冲击台中市政府，并开始筹组共产党武装“二七部队”，吸收许多前日军退役军人和青年学生加入。</p>
 <p>陈仪于3月2日向中央政府请兵，发加急电报：“祈即派大军，以平怨气。”鉴于谢雪红等共党分子在台煽动民众暴乱，事态已经扩大，蒋介石不得已派出国军整编第21师赴台平乱。</p>
@@ -31,8 +28,7 @@
 <p>3月16日，台共“二七部队”被国军围剿后，宣布解散，谢雪红遭通缉后逃亡大陆。3月20日，陈仪下令开始清乡镇压。军队被指控发生强捕滥杀现象，许多民众被捕遇害，或被送到劳改营，对台湾民众造成更大的伤害。</p>
 <p>二二八事件造成的伤亡数字众说纷纭，各方统计的死亡人数由数百人、数千人、一万余人、至数万人不等。1992年行政院《二二八事件研究报告》推估死亡人数在1万8千人至2万8千人。</p>
 <p><B>白崇禧赴台宣慰 禁止军警滥杀无辜 </B></p>
-<figure id="attachment_5699131" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/02/1402210459082068-600x450.jpg" alt="1947年3月22日，国防部长白崇禧在台湾处理善后二.二八事变，为延平郡王郑成功的题词石碑：忠肝义胆。（摄影：贯明）" title="1947年3月22日，国防部长白崇禧在台湾处理善后二.二八事变，为延平郡王郑成功的题词石碑：忠肝义胆。（摄影：贯明）" width="600" b="450"
-	class="size-large wp-image-5699131" /></a><figcaption class="wp-caption-text">1947年3月22日，国防部长白崇禧在台湾处理善后二.二八事变，为延平郡王郑成功的题词石碑：忠肝义胆。（摄影：贯明）</figcaption></figure>
+<figure id="attachment_5699131" aria-describedby="caption-attachment-5699131" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/02/1402210459082068-600x450.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5699131" class="wp-caption-text">1947年3月22日，国防部长白崇禧在台湾处理善后二.二八事变，为延平郡王郑成功的题词石碑：忠肝义胆。（摄影：贯明）</figcaption></figure>
 <p>3月17日，首任国防部长白崇禧奉国民政府主席蒋中正（蒋介石）之命，飞赴台湾处理善后二二八事变。同机随行的还有国防部副参谋长冷欣和国民党青年团组织处长蒋经国等人。</p>
 <p>此时的台湾经过一周的强力整肃绥靖后，人心惶惶，民众恐慌。台湾中央研究院研究员许雪姬指出，白崇禧早在3月11日就已经接到蒋中正主席的命令，而迟至17日才抵达台湾，这跟陈仪的居中掣肘不无关系。且白崇禧下达禁止滥杀的“宣字第1号”命令也在陈仪的行政处置阻扰下，隔了许多天才公布揭示。</p>
 <p>3月17日，白崇禧抵台的当天，首先由国民政府主席蒋中正向台湾民众广播中央政府的政策：“期于确保国家立场及采纳台胞真正民意的原则下，谋合理之解决。”</p>
@@ -41,8 +37,7 @@
 <p>为了迅速稳定局势和安定民心，白崇禧赴各地展开密集宣慰活动，巡视了解民情，向全台湾民众发表多次广播讲话，反复强调中央政府将以和平宽大的方针处理事变，除煽惑暴动之共党、奸徒、图谋不轨者决予严惩外，其余一律从宽免究。白崇禧并宣示中央政府对台胞关心的“自身权利及利益”，“在可能的范围内一定加以最大的注意与扶助”。（《二二八事件资料选辑》（二））。他还特许本省人前来控诉冤屈，解救了许多遭诬陷的台湾仕绅、菁英及平民百姓。</p>
 <p>台湾作家吴浊流在《无花果》中记载：“白崇禧将军在广播中发表处理方针。于是秩序因此而立刻恢复了。”</p>
 <p>[[11]]<br />
-	<figure id="attachment_5702888" style="width: 528px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/02/1403012324022068.jpg" alt="历史学者胡忠信说：白崇禧特别主动到台湾大学演讲，表示对青年学生不究既往，保障安全。（网络视频截图）" title="历史学者胡忠信说：白崇禧特别主动到台湾大学演讲，表示对青年学生不究既往，保障安全。（网络视频截图）" width="528" b="373"
-	class="size-large wp-image-5702888" /></a><figcaption class="wp-caption-text">历史学者胡忠信说：白崇禧特别主动到台湾大学演讲，表示对青年学生不究既往，保障安全。（网络视频截图）</figcaption></figure></p>
+	<figure id="attachment_5702888" aria-describedby="caption-attachment-5702888" style="width: 528px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/02/1403012324022068.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5702888" class="wp-caption-text">历史学者胡忠信说：白崇禧特别主动到台湾大学演讲，表示对青年学生不究既往，保障安全。（网络视频截图）</figcaption></figure></p>
 <p>白崇禧在台湾16天，从北到南，到处广播演讲宣扬政府政策。他向全台湾广播五次；对长官公署全体职员及警备总部全体官兵训话各一次；对省市各级公务员、民意机关代表、民意代表训话共十六次；对高山族代表训话二次；对驻台陆、海、空军及要塞部队训话五次。对青年学生演讲广播二次。</p>
 <p>一向爱惜人才的白崇禧还特别到台湾大学演讲，对青年学生特别宽容：“凡参加暴动之青年学生，准予复学，并准免交特别保证书照片，只须由家长保证悔过自新，即予免究。”3月20日，白崇禧向全台湾广播，呼吁学生归校上课，并保证复学学生的人身安全。他并呼吁青年学子：“切望你们放大眼光，不要歧视外省人，破除地域观念，……。我们要本亲爱精诚，如手如足，互助合作。”</p>
 <p>3月20日，白崇禧在台北行政长官公署大礼堂（今行政院）召集台北公务员讲话，其间特别安抚遭受殴打的外省公务员：“余今仍盼诸君继续留台工作，勿稍灰心。<B>须知中国不能离开台湾，台湾亦不能离开中国，诸君留台服务，实与前往内地服务无异。且台湾乃新收复之领土，即就教育而言，吾人之工作必须五年至十年始可完成。 </B>日前侮辱诸君以及伤害诸君者，仅为极少数之不良份子，极大多数之台胞仍极爱国，且愿与诸君精诚合作，二二八事件，纯系意外之偶然事件，余信今后决不致再有此事，余并保证今后中央亦绝不容许再有此事。”</p>
@@ -52,8 +47,7 @@
 <p>4月2日，白崇禧结束长达16天的台湾任务，搭机返回南京。两周后他呈报国民政府主席蒋中正，就二二八事件严厉批评台湾省行政长官公署长官陈仪，并指出警备总部负责人柯远芬“处事操切、滥用职权，对此次事变举措尤多失当，且赋性刚愎、不知悛改，拟请与以撤职处分，已示惩戒，而平民忿。”（《大溪档案》）。黄埔军校四期毕业的柯远芬，最后被蒋介石以调职处置。</p>
 <p>1948年8月，陈仪受时任京沪杭警备总司令汤恩伯的推荐，被蒋介石委任为浙江省政府主席。1949年元月，陈仪眼见局势对国民党不利，便欲投靠毛泽东中共，并企图策反汤恩伯投共，被汤检举，后被蒋介石撤职软禁。1950年5月，陈仪涉匪谍案，蒋介石指示台湾军事法庭判处其死刑。</p>
 <p><B>谢雪红助纣为虐 被打成“右派”批斗</B></p>
-<figure id="attachment_5702890" style="width: 411px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/02/1402270716212068.jpg" alt="二二八事变女主角，台共头目谢雪红为中共卖命颠覆台湾后，被中共打成“大右派”，被共党台盟同伙多次批斗。（网络图片）" title="二二八事变女主角，台共头目谢雪红为中共卖命颠覆台湾后，被中共打成“大右派”，被共党台盟同伙多次批斗。（网络图片）" width="411" b="381"
-	class="size-large wp-image-5702890" /></a><figcaption class="wp-caption-text">二二八事变女主角，台共头目谢雪红为中共卖命颠覆台湾后，被中共打成“大右派”，被共党台盟同伙多次批斗。（网络图片）</figcaption></figure>
+<figure id="attachment_5702890" aria-describedby="caption-attachment-5702890" style="width: 411px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/02/1402270716212068.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5702890" class="wp-caption-text">二二八事变女主角，台共头目谢雪红为中共卖命颠覆台湾后，被中共打成“大右派”，被共党台盟同伙多次批斗。（网络图片）</figcaption></figure>
 <p>中共在台湾的头目谢雪红遭通缉后，逃往大陆。中共窃国后，谢雪红出任中共中央华东局军政委员、“中国全国妇女联合会”副主席、中共人大代表和政协委员。</p>
 <p>尽管谢雪红为中共颠覆台湾卖过命，但在1957年被中共打成“右派”，遭到共党台盟不少于10次批斗。中共官媒发表题为《右派分子谢雪红罪行累累》的文章，指控其三大罪状：一是“共产党的叛徒”；二是“贪污二二八人民捐献的台币十万元”，三是二二八事变率先当逃兵逃跑。</p>
 <p>谢雪红只得公开招认：“我下流，我卑污，我做过许多不可告人的事。”同时她也很不甘心，又曝出中共高层的丑陋，为自己的罪行开脱： “你们去打探打探，今天党的领导同志，不问男和女，都比我污泥生活不知要烂污多少倍，为什么他们却是光荣，而目前对我就是罪状呢？”</p>
@@ -68,41 +62,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/12/4/28/n3576564.md#1">蒋介石曾明示白崇禧接棒 白常犯颜直谏</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/12/9/21/n3688364.md#1">【史海】千古战神 北伐抗日名将白崇禧（上）</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/12/9/24/n3690093.md#1">【史海】千古战神 北伐抗日名将白崇禧（下）</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/12/12/17/n3754909.md#1">白崇禧夫妇墓园  列市定古迹</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/4/28/n3576564.md#1">蒋介石曾明示白崇禧接棒 白常犯颜直谏</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/9/21/n3688364.md#1">【史海】千古战神 北伐抗日名将白崇禧（上）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/9/24/n3690093.md#1">【史海】千古战神 北伐抗日名将白崇禧（下）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/12/17/n3754909.md#1">白崇禧夫妇墓园  列市定古迹</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045304.md#1" target="_blank">《苦菜花》人物原型的真实人生（4）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/30/n10441048.md#1" target="_blank">西人学炼法轮功 生活发生深刻变化</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/8/n10285795.md#1" target="_blank">改革开放总设计师还是“总扼制师”？(下)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/15/n3683727.md#1" target="_blank">历史回顾：公安部给李洪志先生的感谢信</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/2/26/n12776678.md#1">《圣经》专家：龙确实存在 曾与人类共存</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/20/12/30/n12654622.md#1">【命理】他才胜于德 如何走上自我毁灭之路</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/2/26/n12777426.md#1">《转法轮》提及的史前文明案例：海底建筑</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/2/24/n12771764.md#1">预言试析（9）诺查丹玛斯预言大瘟疫时间的算法</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/2/28/n12780659.md#1">《转法轮》提及的史前文明案例：远古壁画</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/3/2/n12785575.md#1">【时事纵横】小粉红恐吓留学生 中共高铁攻台？</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/3/1/n12783290.md#1">【横河观点】川普谈愿景 共和党如何夺两院白宫</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/3/2/n12785618.md#1">【探索时分】F35停产是假新闻 到底发生什么</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/3/1/n12782578.md#1">【新闻大家谈】习有备胎？遭内外合击难安</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/3/1/n12782462.md#1">【微视频】中国第一村骗贷搞发展 华西爆挤兑潮</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/3/1/n12782016.md#1">美俄两个小岛相隔几公里 时差却多达21小时</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/2/26/n12776649.md#1">《蜘蛛人3》正式定名 汤姆霍兰德挥别漫威宇宙</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/3/1/n12783059.md#1">44岁舒淇满头现白发 网友难接受为她支招</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/2/28/n12780937.md#1">杨颖上台走秀 黄晓明坐观众席拍照登热搜</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/3/1/n12781917.md#1">“黑豹”查德维克夺金球影帝 遗孀领奖落泪</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/2/28/n12780646.md#1">陈惠敏中风罹癌后渐康复 即将复出自认辛苦命</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/3/1/n12782016.md#1">美俄两个小岛相隔几公里 时差却多达21小时</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/2/28/n12779783.md#1">中共禁台湾凤梨 多国网友争先发表挺台言论</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/2/21/n12766128.md#1">90%打鼾的人是因为张嘴呼吸？简单4步止鼾</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/2/28/n12780850.md#1">新冠病毒能饿死？中医师：吃它才能快速恢复</a></li>
-<li><a href="https://github.com/hvpmna322/djy/blob/master/gb/21/3/2/n12783382.md#1">凤梨助消化、改善便秘 4种情况要少吃</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hvpmna322/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hvpmna322/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/2/27/n4093815.htm">【历史今日】二二八事变真相</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/2/27/n4093815.htm">【历史今日】二二八事变真相</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hvpmna322/djy/blob/master/gb/14/2/27/n4093815.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hvpmna322/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hvpmna322/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hvpmna322/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hvpmna322/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvpmna322/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/14/2/27/n4093815.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
